// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit Detailspage tests should render full Detailspage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  margin-left: -10px;
}

.c4 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 > * {
  margin-left: 10px;
}

.c6 {
  margin-left: -5px;
}

.c6 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 > * {
  margin-left: 5px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9 {
  cursor: pointer;
}

.c10 svg path {
  fill: #bfbfbf;
}

.c7 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c7 * {
  height: inherit;
  width: inherit;
}

.c19 {
  height: 50px;
  width: 50px;
  line-height: 50px;
}

.c19 * {
  height: inherit;
  width: inherit;
}

.c14 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c15 {
  margin: 0 0 1px 0;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c18 {
  margin-right: 5px;
}

.c20 {
  word-break: break-all;
  min-width: 100px;
}

.c28 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #f3f3f3;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  background-color: #f3f3f3;
  border-bottom: 1px solid #f3f3f3;
  margin-bottom: -2px;
  border-top: 2px solid #11ab51;
}

.c28:hover {
  border-top: 2px solid #fff;
}

.c28:first-child {
  border-left: 1px solid #e5e5e5;
}

.c29 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #fff;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  border-top: 2px solid #fff;
}

.c29:hover {
  border-top: 2px solid #e5e5e5;
}

.c29:first-child {
  border-left: 1px solid #fff;
}

.c26 {
  border-bottom: 2px solid #11ab51;
  margin-top: 30px;
  margin-bottom: 15px;
}

.c33 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c43 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c42 > *:not(:last-child)::after {
  content: '•';
  margin-left: 5px;
}

.c34 td {
  padding: 4px 4px 4px 0;
}

.c34 tr td:first-child {
  padding-right: 5px;
}

.c23 {
  border-spacing: 0px;
  color: #7F7F7F;
  font-size: 10px;
}

.c23 :nth-child(even) {
  margin-left: 3px;
}

.c23 :nth-child(odd) {
  margin-left: 30px;
}

.c35 {
  width: 10%;
}

.c36 {
  width: 90%;
}

.c31 {
  font-size: 0.7em;
}

.c38 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c40 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c39 {
  height: 13px;
  width: 100%;
  background: #4f91c7;
}

.c41 {
  white-space: nowrap;
}

.c37:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {

}

@media print {
  .c9 {
    display: none;
  }
}

@media print {

}

@media print {
  .c33 {
    border-collapse: collapse;
  }
}

@media print {
  .c43 {
    border-collapse: collapse;
  }
}

@media print {
  .c38 {
    background: none;
    border: 0;
  }
}

@media print {
  .c40 {
    color: black;
  }
}

@media print {
  .c39 {
    background: none;
  }
}

<div
  class="c0"
>
  <div
    class="c1 toolbar"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c2 c4"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c5 c6"
          >
            <a
              href="test/en/compliance-and-special-scans.html#configuring-and-managing-audits"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c7"
                data-testid="svg-icon"
                title="Help: Audits"
              >
                <svg
                  title="Help: Audits"
                >
                  help.svg
                </svg>
              </span>
            </a>
            <a
              class="c8"
              href="/audits"
            >
              <span
                class="c7"
                data-testid="svg-icon"
                title="Audit List"
              >
                <svg
                  title="Audit List"
                >
                  list.svg
                </svg>
              </span>
            </a>
            <span
              class="c7"
              data-testid="svg-icon"
              title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
            >
              <svg
                title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
              >
                alterable.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
          >
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Clone Audit"
            >
              <svg
                title="Clone Audit"
              >
                clone.svg
              </svg>
            </span>
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Edit Audit"
            >
              <svg
                title="Edit Audit"
              >
                edit.svg
              </svg>
            </span>
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Move Audit to trashcan"
            >
              <svg
                title="Move Audit to trashcan"
              >
                trashcan.svg
              </svg>
            </span>
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Export Audit as XML"
            >
              <svg
                title="Export Audit as XML"
              >
                export.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
          >
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Start"
            >
              <svg
                title="Start"
              >
                start.svg
              </svg>
            </span>
            <span
              alt="Resume"
              class="c10 c7"
              data-testid="svg-icon"
              title="Audit is not stopped"
            >
              <svg
                title="Audit is not stopped"
              >
                resume.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c4"
          >
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
              >
                <a
                  class="c8"
                  data-testid="details-link"
                  href="/report/1234"
                  title="Last Report for Audit foo from 07/30/2019"
                >
                  <span
                    class="c7"
                    data-testid="svg-icon"
                  >
                    <svg>
                      report.svg
                    </svg>
                  </span>
                </a>
                <a
                  class="c8"
                  href="/reports?filter=task_id%3D12345"
                  title="Total Reports for Audit foo"
                >
                  <div
                    class="c11"
                  >
                    <span
                      class="c7"
                      data-testid="svg-icon"
                    >
                      <svg>
                        report.svg
                      </svg>
                    </span>
                    <span
                      class="c12"
                      data-testid="badge-icon"
                    >
                      1
                    </span>
                  </div>
                </a>
              </div>
            </div>
            <a
              class="c8"
              href="/results?filter=task_id%3D12345"
              title="Results for Audit foo"
            >
              <div
                class="c11"
              >
                <span
                  class="c7"
                  data-testid="svg-icon"
                >
                  <svg>
                    result.svg
                  </svg>
                </span>
                <span
                  class="c12"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    class="entity-section"
  >
    <div
      class="c13 c14 section-header"
    >
      <h2
        class="c15 c16"
      >
        <div
          class="c17 c18"
        >
          <span
            class="c19"
            data-testid="svg-icon"
          >
            <svg>
              audit.svg
            </svg>
          </span>
        </div>
        <div
          class="c17 c20"
        >
          Audit: foo
        </div>
      </h2>
      <div
        class="c21"
      >
        <div
          class="c22"
        >
          <div
            class="c2 c23"
          >
            <div>
              ID:
            </div>
            <div>
              12345
            </div>
            <div>
              Created:
            </div>
            <div>
              Tue, Jul 16, 2019 8:31 AM CEST
            </div>
            <div>
              Modified:
            </div>
            <div>
              Tue, Jul 16, 2019 8:44 AM CEST
            </div>
            <div>
              Owner:
            </div>
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c24"
    >
      <div
        class="c25 c26"
      >
        <div
          class="c27"
        >
          <div
            class="c28"
          >
            Information
          </div>
          <div
            class="c29"
          >
            <div
              class="c30"
            >
              <span>
                Permissions
              </span>
              <span
                class="c31"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c32"
      >
        <table
          class="c33 c34"
        >
          <colgroup>
            <col
              class="c35"
              width="10%"
            />
            <col
              class="c36"
              width="90%"
            />
          </colgroup>
          <tbody
            class=""
          >
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Name
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  foo
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Comment
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  bar
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Alterable
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  Yes
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Status
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  <a
                    class="c8 c37"
                    data-testid="details-link"
                    href="/report/1234"
                  >
                    <div
                      class="c38"
                      data-testid="progressbar-box"
                      title="Done"
                    >
                      <div
                        background="low"
                        class="c39"
                        data-testid="progress"
                      />
                      <div
                        class="c40"
                      >
                        <span
                          class="c41"
                        >
                          Done
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="c24"
        >
          <div
            class="c32"
          >
            <h2>
              Target
            </h2>
            <div>
              <a
                class="c8"
                data-testid="details-link"
                href="/target/5678"
              >
                target1
              </a>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Alerts
            </h2>
            <div>
              <div
                class="c2 c3"
              >
                <div
                  class="c2 c6 c42"
                >
                  <span>
                    <a
                      class="c8"
                      data-testid="details-link"
                      href="/alert/91011"
                    >
                      alert1
                    </a>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Scanner
            </h2>
            <div>
              <table
                class="c43 c34"
              >
                <colgroup>
                  <col
                    class="c35"
                    width="10%"
                  />
                  <col
                    class="c36"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Name
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        <span>
                          <a
                            class="c8"
                            data-testid="details-link"
                            href="/scanner/1516"
                          >
                            scanner1
                          </a>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Type
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        OpenVAS Scanner
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Assets
            </h2>
            <div>
              <table
                class="c43 c34"
              >
                <colgroup>
                  <col
                    class="c35"
                    width="10%"
                  />
                  <col
                    class="c36"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Add to Assets
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Scan
            </h2>
            <div>
              <table
                class="c43 c34"
              >
                <colgroup>
                  <col
                    class="c35"
                    width="10%"
                  />
                  <col
                    class="c36"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Duration of last Scan
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        2 minutes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Auto delete Reports
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        Do not automatically delete reports
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Audit ToolBarIcons tests should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  margin-left: -10px;
}

.c2 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 > * {
  margin-left: 10px;
}

.c4 {
  margin-left: -5px;
}

.c4 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 > * {
  margin-left: 5px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  cursor: pointer;
}

.c8 svg path {
  fill: #bfbfbf;
}

.c5 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {

}

@media print {
  .c7 {
    display: none;
  }
}

@media print {

}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c3 c4"
      >
        <a
          href="test/en/compliance-and-special-scans.html#configuring-and-managing-audits"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5"
            data-testid="svg-icon"
            title="Help: Audits"
          >
            <svg
              title="Help: Audits"
            >
              help.svg
            </svg>
          </span>
        </a>
        <a
          class="c6"
          href="/audits"
        >
          <span
            class="c5"
            data-testid="svg-icon"
            title="Audit List"
          >
            <svg
              title="Audit List"
            >
              list.svg
            </svg>
          </span>
        </a>
        <span
          class="c5"
          data-testid="svg-icon"
          title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
        >
          <svg
            title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
          >
            alterable.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
      >
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Clone Audit"
        >
          <svg
            title="Clone Audit"
          >
            clone.svg
          </svg>
        </span>
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Edit Audit"
        >
          <svg
            title="Edit Audit"
          >
            edit.svg
          </svg>
        </span>
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Move Audit to trashcan"
        >
          <svg
            title="Move Audit to trashcan"
          >
            trashcan.svg
          </svg>
        </span>
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Export Audit as XML"
        >
          <svg
            title="Export Audit as XML"
          >
            export.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
      >
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Start"
        >
          <svg
            title="Start"
          >
            start.svg
          </svg>
        </span>
        <span
          alt="Resume"
          class="c8 c5"
          data-testid="svg-icon"
          title="Audit is not stopped"
        >
          <svg
            title="Audit is not stopped"
          >
            resume.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c2"
      >
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
          >
            <a
              class="c6"
              data-testid="details-link"
              href="/report/1234"
              title="Last Report for Audit foo from 07/30/2019"
            >
              <span
                class="c5"
                data-testid="svg-icon"
              >
                <svg>
                  report.svg
                </svg>
              </span>
            </a>
            <a
              class="c6"
              href="/reports?filter=task_id%3D12345"
              title="Total Reports for Audit foo"
            >
              <div
                class="c9"
              >
                <span
                  class="c5"
                  data-testid="svg-icon"
                >
                  <svg>
                    report.svg
                  </svg>
                </span>
                <span
                  class="c10"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
        <a
          class="c6"
          href="/results?filter=task_id%3D12345"
          title="Results for Audit foo"
        >
          <div
            class="c9"
          >
            <span
              class="c5"
              data-testid="svg-icon"
            >
              <svg>
                result.svg
              </svg>
            </span>
            <span
              class="c10"
              data-testid="badge-icon"
            >
              1
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
